--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title></title>
+    <link rel="stylesheet" href="css/main.css"/>
+    <script type="text/javascript" src="components/angular/angular.min.js"></script>
 </head>
 <body>
 <h1>Public html</h1>
