--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,17 @@
 <head>
     <title></title>
     <link rel="stylesheet" href="css/main.css"/>
+    <script type="text/javascript" src="components/lodash/lodash.min.js"></script>
     <script type="text/javascript" src="components/angular/angular.min.js"></script>
     <script type="text/javascript" src="components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="components/angular-resource/angular-resource.min.js"></script>
-    <script type="text/javascript" src="components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
     <script type="text/javascript" src="js/AppService.js"></script>
     <script type="text/javascript" src="js/AppController.js"></script>
+    <script type="text/javascript" src="js/AppDirectives.js"></script>
 </head>
 <body>
-<div class ="container" ng-app="App" ng-controller="AppController">
+<div class ="container" id="main" ng-app="App" ng-controller="AppController">
 
     <ul class="products">
         <li data-ng-repeat = "(key, item) in data">
