--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,8 @@
     <title></title>
     <link rel="stylesheet" href="css/main.css"/>
     <script type="text/javascript" src="components/lodash/lodash.min.js"></script>
-    <!--<script type="text/javascript" src="components/angular/angular.min.js"></script>-->
-    <!--<script type="text/javascript" src="components/angular-resource/angular-resource.min.js"></script>-->
-
-    <script type="text/javascript" src="js/service/Service.js"></script>    <!--<script type="text/javascript" src="js/AppService.js"></script>-->
+    <script type="text/javascript" src="js/service/Service.js"></script>
     <script type="text/javascript" src="js/App.js"></script>
-
-    <!--<script type="text/javascript" src="js/AppController.js"></script>-->
-    <!--<script type="text/javascript" src="js/AppDirectives.js"></script>-->
 </head>
 <body onLoad="init()">
 <div class ="container" id="main" ng-app="App" ng-controller="AppController">
